[package]
name = "emyzelium"
version = "0.9.2"
authors = ["serhon <serhon@protonmail.com>"]
description = "Wrapper for ZeroMQ's Pub-Sub with Curve+ZAP, over Tor. Peers, identified by onion, port, and public key, publish Vec<Vec<u8>> under topics to which other peers subscribe."
homepage = "https://github.com/emyzelium/emyzelium-rs"
readme = "crates-io.md"
keywords = ["network", "peer", "publish-subscribe", "tor", "zeromq"]
categories = ["network-programming"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
incremental = true

[dev-dependencies]
crossterm = "0.26"
rand = "0.8"