[package]
name = "emyzelium"
version = "0.9.3"
authors = ["emyzelium <emyzelium@protonmail.com>", "serhon <serhon@protonmail.com>"]
description = "Wrapper for ZeroMQ's Pub-Sub with Curve+ZAP, over Tor. Peers, identified by public key, onion, and port, publish Vec<Vec<u8>> under topics to which other peers subscribe."
homepage = "https://github.com/emyzelium/emyzelium-rs"
keywords = ["network", "peer", "publish-subscribe", "tor", "zeromq"]
categories = ["network-programming"]
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
incremental = true

[dependencies]
rand = "0.8"

[dev-dependencies]
crossterm = "0.26"
